--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--   Name:      Chandler Herrington
+       Date:      05/10/20
+       Project:   Bio site
+-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>My Bio</title>
+  <title>Home</title>
 </head>
 <body>
-  <h1>Welcome to my bio!</h1>
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="resume.html">Resume</a>
+      <a class="nav-item nav-link" href="contact.html">Contact</a>
+    </div>
+  </div>
+  </nav>
+  <img src="images/office.jpg" class="frontpic" alt="...">
+  <div class="summary">
+    <img src="images/examplepic.jpeg" class="self" alt="...">
+    <h1>Who am I?</h1>
+    <h4>My name is Chandler Herrington and I'm working on my Computer Information Science degree to become a computer programmer.</h4>
+
+  </div>
 
 </body>
 </html>
